Update MVC y API de Tienda